fix alignment

--- a/src/implementations/vanilla/components/site-header/site-header-ec.scss
+++ b/src/implementations/vanilla/components/site-header/site-header-ec.scss
@@ -43,7 +43,7 @@ $site-header: null !default;
   }
 
   .ecl-menu__open {
-    margin-bottom: 7px;
+    margin-bottom: 14px;
   }
 
   .ecl-site-header__cta {
